Remove line-height change since we are no longer allowing wrapping

--- a/client/my-sites/plans/jetpack-plans/product-store/simple-item-card/style.scss
+++ b/client/my-sites/plans/jetpack-plans/product-store/simple-item-card/style.scss
@@ -103,7 +103,6 @@
 	font-size: $font-body;
 	min-width: 5.7rem;
 	border-width: 0;
-	line-height: 1.2;
 	white-space: nowrap;
 
 	.gridicon.gridicons-checkmark {
